p10-gitlab/k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: gitlab-app
  labels:
    app: gitlab
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: gitlab
    tier: cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: gitlab-app
  labels:
    app: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
      tier: cache
  template:
    metadata:
      namespace: gitlab-app
      labels:
        app: gitlab
        tier: cache
    spec:
      containers:
        - image: redis:3.0.7-alpine
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis
              mountPath: /data
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: pv-gitlab-redis
