p10-gitlab/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: gitlab.192.168.1.100.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 80
